Giraph Change Log

Release 1.1.0 - unreleased
  GIRAPH-856: Log amount of free memory on the command line (majakabiljo)

  GIRAPH-860: Giraph jobs can hang forever if HDFS filestamps aren't 
  created (aching)

  GIRAPH-858: tests fail for hadoop_facebook because of dependency issues
  (pavanka via aching)

  GIRAPH-814: Incorrect MapReduce application classpath processing (AlexJF via claudio)

  GIRAPH-850: Improve internal zookeeper launching (AlexJF via claudio)

  GIRAPH-855: RecordReaderWrapper swallows exceptions (aching)

  GIRAPH-848: Allowing plain computation with types being configurable (ikabiljo via majakabiljo)

  GIRAPH-854: fix for test fail due to GIRAPH-840 (pavanka via majakabiljo)

  GIRAPH-853: Fix concurrency issue in GiraphMetrics (majakabiljo)

  GIRAPH-840: Upgrade to netty 4 (pavanka via majakabiljo)

  GIRAPH-816: ByteArrayPartition not combining vertex edges (cmuchins via majakabiljo)

  GIRAPH-844: TextInputFormat for SimpleShortestPaths (ssc)

  GIRAPH-841: fix missing munge symbols error for non-munge-using profiles (Eugene Koontz via rvs)

  GIRAPH-794: add support for generic hadoop1 and hadoop2 profiles (rvs)

  GIRAPH-833: Upgrade to ZooKeeper 3.4.5 (aching)

  GIRAPH-836: Delay hive preparation until after the arguments are parsed (this allows 
  functionality such as creating a table) (aching)

  GIRAPH-843: remove rexter from hadoop_facebook profile (pavanka via aching)

  GIRAPH-838: setup time & total time counter also include time spent waiting for machines
  (pavanka via majakabiljo)

  GIRAPH-839: NettyWorkerAggregatorRequestProcessor tries to reuse request objects 
  (pavanka via majakabiljo)

  GIRAPH-835: org.apache.giraph.hive.input.CheckInputTest Fails because JobProgressTracker
  doesn't check null (akila via majakabiljo)

  GIRAPH-834: Metrcis missing superstep time (armax00 via claudio)

  GIRAPH-819: Number of Containers Required for a Job (Rafal Wojdyla via ereisman)
